- Moved `ResourceHelper` into `Helpers` folder - Resource improvements - Added support for classic icon

--- a/src/Hyper-V Tray/Resources/Strings.resx
+++ b/src/Hyper-V Tray/Resources/Strings.resx
@@ -118,7 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Menu_AllVirtualMachines" xml:space="preserve">
-    <value>xxAll Virtual Machines</value>
-    <comment>unconfirmed</comment>
+    <value>All Virtual Machines</value>
+  </data>
+  <data name="String_UnknownVirtualMachine" xml:space="preserve">
+    <value>Unknown Virtual Machine</value>
   </data>
 </root>
