--- a/src/Hyper-V Tray/Resources/Icons.resx
+++ b/src/Hyper-V Tray/Resources/Icons.resx
@@ -118,7 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="TrayIcon_Modern" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Icon_Classic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\..\assets\icons\HyperV_Classic.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Icon_Modern" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\..\assets\icons\HyperV.ico;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
