Moved "toast" string into correct ResX file.

--- a/src/Hyper-V Tray/Resources/Strings.resx
+++ b/src/Hyper-V Tray/Resources/Strings.resx
@@ -123,4 +123,7 @@
   <data name="String_UnknownVirtualMachine" xml:space="preserve">
     <value>Unknown Virtual Machine</value>
   </data>
+  <data name="Toast_CriticalState" xml:space="preserve">
+    <value>Virtual Machine is in a critical state.</value>
+  </data>
 </root>
